[package]
name = "jade-ec-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Registry", "Win32_Foundation"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "jade-ec-launcher"
path = "src/main.rs"
